--- a/public/techs/trey/index.html
+++ b/public/techs/trey/index.html
@@ -104,7 +104,7 @@
               </svg>
             </div>
             <div class="mb-5">
-              <span class="top-title pre-line">Hello World </span>
+              <span class="top-title pre-line"></span>
               <h1 id="test-content">Test content</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elite mf
             </div>
