--- a/public/index.html
+++ b/public/index.html
@@ -11,21 +11,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <!-- Slick Carousel -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/slick/slick.css" />
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/slick/slick-theme.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/slick/slick.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/slick/slick-theme.css" />
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/font-awesome/css/font-awesome.min.css" />
 
   <!-- Magnific Popup -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/magnafic-popup/magnific-popup.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/magnafic-popup/magnific-popup.css" />
 
   <!-- Stylesheets -->
   
-  <link href="https://northdallas.pro/scss/style.min.css" rel="stylesheet" />
+  <link href="https://thesmarthome.pro/scss/style.min.css" rel="stylesheet" />
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="https://northdallas.pro/images/favicon.ico" type="image/x-icon" />
-  <link rel="icon" href="https://northdallas.pro/images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://thesmarthome.pro/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="https://thesmarthome.pro/images/favicon.png" type="image/x-icon" />
 
   <!-- Google Analytics -->
   <script src="https://www.google.com/recaptcha/api.js" async></script>
