--- a/public/partners/test/index.html
+++ b/public/partners/test/index.html
@@ -10,21 +10,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <!-- Slick Carousel -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/slick/slick.css" />
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/slick/slick-theme.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/slick/slick.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/slick/slick-theme.css" />
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/font-awesome/css/font-awesome.min.css" />
 
   <!-- Magnific Popup -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/magnafic-popup/magnific-popup.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/magnafic-popup/magnific-popup.css" />
 
   <!-- Stylesheets -->
   
-  <link href="https://northdallas.pro/scss/style.min.css" rel="stylesheet" />
+  <link href="https://thesmarthome.pro/scss/style.min.css" rel="stylesheet" />
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="https://northdallas.pro/images/favicon.ico" type="image/x-icon" />
-  <link rel="icon" href="https://northdallas.pro/images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://thesmarthome.pro/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="https://thesmarthome.pro/images/favicon.png" type="image/x-icon" />
 
   <!-- Google Analytics -->
   <script src="https://www.google.com/recaptcha/api.js" async></script>
@@ -93,8 +93,8 @@
           <div class="figure-svg">
             <img src="/images/hero/figure-svg.svg" alt="figure-svg" />
           </div>
-          <img src="https://northdallas.pro/trey/hero-trey.jpg" alt="hero-image" style='
-                  -webkit-mask: url(https://northdallas.pro/images/hero/hero-mask-svg.png);
+          <img src="https://thesmarthome.pro/trey/hero-trey.jpg" alt="hero-image" style='
+                  -webkit-mask: url(https://thesmarthome.pro/images/hero/hero-mask-svg.png);
                   -webkit-mask-repeat: no-repeat;
                   -webkit-mask-size: contain;
                   -webkit-mask-position: center center;
@@ -103,7 +103,7 @@
           
           <div class="hero_figure-popup">
             <div class="thumb">
-              <img src="https://northdallas.pro/images/hero/popup-thumb.jpg" alt="popup" />
+              <img src="https://thesmarthome.pro/images/hero/popup-thumb.jpg" alt="popup" />
             </div>
             
             <a type="button" id="modal-button" class="popup-button text-center big" data-toggle="video-modal" data-src="https://www.youtube.com/embed/KzJzXHmzc98?si=6H9NcYkTtI0TeCpI" data-target="video-modal">
@@ -356,7 +356,7 @@ if needed.
                                 </svg>
                             </div>
                             <div class="icon">
-                                <img src=" https://northdallas.pro/images/service/fire.png " alt="ui-ux">
+                                <img src=" https://thesmarthome.pro/images/service/fire.png " alt="ui-ux">
                             </div>
                         </div>
                         <div class="mt-5 service__textContent">
@@ -376,7 +376,7 @@ if needed.
                                 </svg>
                             </div>
                             <div class="icon">
-                                <img src=" https://northdallas.pro/images/service/cloud.png " alt="ui-ux">
+                                <img src=" https://thesmarthome.pro/images/service/cloud.png " alt="ui-ux">
                             </div>
                         </div>
                         <div class="mt-5 service__textContent">
@@ -396,7 +396,7 @@ if needed.
                                 </svg>
                             </div>
                             <div class="icon">
-                                <img src=" https://northdallas.pro/images/service/lock.png " alt="ui-ux">
+                                <img src=" https://thesmarthome.pro/images/service/lock.png " alt="ui-ux">
                             </div>
                         </div>
                         <div class="mt-5 service__textContent">
@@ -416,7 +416,7 @@ if needed.
                                 </svg>
                             </div>
                             <div class="icon">
-                                <img src=" https://northdallas.pro/images/service/mobile.png " alt="ui-ux">
+                                <img src=" https://thesmarthome.pro/images/service/mobile.png " alt="ui-ux">
                             </div>
                         </div>
                         <div class="mt-5 service__textContent">
@@ -436,7 +436,7 @@ if needed.
                                 </svg>
                             </div>
                             <div class="icon">
-                                <img src=" https://northdallas.pro/images/service/storm.png " alt="ui-ux">
+                                <img src=" https://thesmarthome.pro/images/service/storm.png " alt="ui-ux">
                             </div>
                         </div>
                         <div class="mt-5 service__textContent">
@@ -456,7 +456,7 @@ if needed.
                                 </svg>
                             </div>
                             <div class="icon">
-                                <img src=" https://northdallas.pro/images/service/speaker.png " alt="ui-ux">
+                                <img src=" https://thesmarthome.pro/images/service/speaker.png " alt="ui-ux">
                             </div>
                         </div>
                         <div class="mt-5 service__textContent">
@@ -591,14 +591,14 @@ if needed.
 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry"></script>
-<script src="https://northdallas.pro/plugins/jQuery/jquery.min.js"></script>
-<script src="https://northdallas.pro/plugins/bootstrap/bootstrap.min.js"></script>
-<script src="https://northdallas.pro/plugins/slick/slick.min.js"></script>
-<script src="https://northdallas.pro/plugins/waypoint/jquery.waypoints.min.js"></script>
-<script src="https://northdallas.pro/plugins/magnafic-popup/jquery.magnific-popup.min.js"></script>
-<script src="https://northdallas.pro/plugins/tweenmax/TweenMax.min.js"></script>
-<script src="https://northdallas.pro/plugins/imagesloaded/imagesloaded.min.js"></script>
-<script src="https://northdallas.pro/plugins/masonry/masonry.min.js"></script>
+<script src="https://thesmarthome.pro/plugins/jQuery/jquery.min.js"></script>
+<script src="https://thesmarthome.pro/plugins/bootstrap/bootstrap.min.js"></script>
+<script src="https://thesmarthome.pro/plugins/slick/slick.min.js"></script>
+<script src="https://thesmarthome.pro/plugins/waypoint/jquery.waypoints.min.js"></script>
+<script src="https://thesmarthome.pro/plugins/magnafic-popup/jquery.magnific-popup.min.js"></script>
+<script src="https://thesmarthome.pro/plugins/tweenmax/TweenMax.min.js"></script>
+<script src="https://thesmarthome.pro/plugins/imagesloaded/imagesloaded.min.js"></script>
+<script src="https://thesmarthome.pro/plugins/masonry/masonry.min.js"></script>
 
 <script>
 	
@@ -612,9 +612,9 @@ function autoResize(iframe) {
 
 
 
-<script src="https://northdallas.pro/js/form-handler.min.js"></script> 
+<script src="https://thesmarthome.pro/js/form-handler.min.js"></script> 
 
-<script src="https://northdallas.pro/js/script.min.js"></script>
+<script src="https://thesmarthome.pro/js/script.min.js"></script>
 
 
 
