--- a/public/techs/index.html
+++ b/public/techs/index.html
@@ -10,21 +10,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <!-- Slick Carousel -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/slick/slick.css" />
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/slick/slick-theme.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/slick/slick.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/slick/slick-theme.css" />
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/font-awesome/css/font-awesome.min.css" />
 
   <!-- Magnific Popup -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/magnafic-popup/magnific-popup.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/magnafic-popup/magnific-popup.css" />
 
   <!-- Stylesheets -->
   
-  <link href="https://northdallas.pro/scss/style.min.css" rel="stylesheet" />
+  <link href="https://thesmarthome.pro/scss/style.min.css" rel="stylesheet" />
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="https://northdallas.pro/images/favicon.ico" type="image/x-icon" />
-  <link rel="icon" href="https://northdallas.pro/images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://thesmarthome.pro/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="https://thesmarthome.pro/images/favicon.png" type="image/x-icon" />
 
   <!-- Google Analytics -->
   <script src="https://www.google.com/recaptcha/api.js" async></script>
@@ -63,21 +63,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <!-- Slick Carousel -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/slick/slick.css" />
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/slick/slick-theme.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/slick/slick.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/slick/slick-theme.css" />
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/font-awesome/css/font-awesome.min.css" />
 
   <!-- Magnific Popup -->
-  <link rel="stylesheet" href="https://northdallas.pro/plugins/magnafic-popup/magnific-popup.css" />
+  <link rel="stylesheet" href="https://thesmarthome.pro/plugins/magnafic-popup/magnific-popup.css" />
 
   <!-- Stylesheets -->
   
-  <link href="https://northdallas.pro/scss/style.min.css" rel="stylesheet" />
+  <link href="https://thesmarthome.pro/scss/style.min.css" rel="stylesheet" />
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="https://northdallas.pro/images/favicon.ico" type="image/x-icon" />
-  <link rel="icon" href="https://northdallas.pro/images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://thesmarthome.pro/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="https://thesmarthome.pro/images/favicon.png" type="image/x-icon" />
 
   <!-- Google Analytics -->
   <script src="https://www.google.com/recaptcha/api.js" async></script>
@@ -102,7 +102,7 @@
                 <h3 class="breadCrumb__title">Techs</h3>
                 <nav aria-label="breadcrumb" class="d-flex justify-content-center">
                     <ol class="breadcrumb align-items-center">
-                        <li class="breadcrumb-item"><a href="https://northdallas.pro/">Home</a></li>
+                        <li class="breadcrumb-item"><a href="https://thesmarthome.pro">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Techs</li>
                     </ol>
                 </nav>
@@ -123,10 +123,10 @@
 
 <section class="section singleBlog">
     <div class="svg-img">
-      <img src=https://northdallas.pro/images/hero/figure-svg.svg alt="">
+      <img src=https://thesmarthome.pro/images/hero/figure-svg.svg alt="">
     </div>
     <div class="animate-shape">
-      <img src=https://northdallas.pro/images/skill/skill-background-shape.svg alt="">
+      <img src=https://thesmarthome.pro/images/skill/skill-background-shape.svg alt="">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 600 600">
         <defs>
           <linearGradient id="d" x1="0.929" y1="0.111" x2="0.263" y2="0.935" gradientUnits="objectBoundingBox">
@@ -141,7 +141,7 @@
       </svg>
     </div>
     <div class="animate-pattern">
-      <img src=https://northdallas.pro/images/service/background-pattern.svg alt="background-shape">
+      <img src=https://thesmarthome.pro/images/service/background-pattern.svg alt="background-shape">
     </div>
   </section>
 
